[gd_scene load_steps=5 format=3 uid="uid://b2de7bag5xiyd"]

[ext_resource type="Script" path="res://ui/PauseMenu/CategoryButton.gd" id="1_3rulg"]
[ext_resource type="Script" path="res://ui/PauseMenu/EquipmentScreen/EquipmentPanel.gd" id="1_s6dl2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lgr8o"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="LabelSettings" id="LabelSettings_240mb"]
font_size = 15

[node name="PanelContainer" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxFlat_lgr8o")
script = ExtResource("1_s6dl2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
expand_mode = 1

[node name="WeaponName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
label_settings = SubResource("LabelSettings_240mb")
script = ExtResource("1_3rulg")
fontSize = 15

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
expand_mode = 1

[node name="ArmorName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
label_settings = SubResource("LabelSettings_240mb")
script = ExtResource("1_3rulg")
fontSize = 15

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
expand_mode = 1

[node name="Accessory1Name" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
label_settings = SubResource("LabelSettings_240mb")
script = ExtResource("1_3rulg")
fontSize = 15

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
expand_mode = 1

[node name="Accessory2Name" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
label_settings = SubResource("LabelSettings_240mb")
script = ExtResource("1_3rulg")
fontSize = 15

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
expand_mode = 1

[node name="Accessory3Name" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
label_settings = SubResource("LabelSettings_240mb")
script = ExtResource("1_3rulg")
fontSize = 15
